--- a/notebooks/01_data_preprocessing/02_population_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing/02_population_preprocessing.ipynb
@@ -34,12 +34,12 @@
     "- `../../datasets/district_shape/sa2_lookup/mapped_target_suburbs.csv` (suburb → SA2 mapping)\n",
     "\n",
     "## Outputs\n",
-    "- `combined_df_full` — fully merged dataset including historical population, projected population, interpolated ERP values, and 2025 median rental prices by SA2\n"
+    "- `full_erp_only_population_data.csv` — fully merged dataset including historical population, projected population, interpolated ERP values, and 2025 median rental prices by SA2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "010f5ce3",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "8917cf2c",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "a59845b2",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
        "[5 rows x 66 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "a346c476",
    "metadata": {},
    "outputs": [
@@ -601,7 +601,7 @@
        "[5 rows x 44 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "ebc586c5",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1032,7 @@
        "[522 rows x 44 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "49dbdcf8",
    "metadata": {},
    "outputs": [
@@ -1080,17 +1080,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 607,
-   "id": "b896d7cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save to local\n",
-    "pop_vic.to_file(\"../datasets/raw/vic_population.gpkg\", driver=\"GPKG\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "efee7521",
    "metadata": {},
@@ -1100,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "97b61dba",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1295,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "5dbbbe01",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "f2748357",
    "metadata": {},
    "outputs": [
@@ -1578,7 +1567,7 @@
        "[5 rows x 205 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1590,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "cb6c7e6c",
    "metadata": {},
    "outputs": [],
@@ -1602,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "ae7e27c1",
    "metadata": {},
    "outputs": [
@@ -1808,7 +1797,7 @@
        "[5 rows x 83 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1821,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "364fd844",
    "metadata": {},
    "outputs": [],
@@ -1847,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "86e54c55",
    "metadata": {},
    "outputs": [
@@ -1868,7 +1857,7 @@
        "Name: suburb, Length: 159, dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "60768589",
    "metadata": {},
    "outputs": [
@@ -2107,13 +2096,13 @@
        "[5 rows x 85 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "suburb_to_sa2 = pd.read_csv(\"../../datasets/district_shape/sa2_lookup/mapped_target_suburbs.csv\")  \n",
+    "suburb_to_sa2 = pd.read_csv(\"../../datasets/raw/district_shape/sa2_lookup/mapped_target_suburbs.csv\")  \n",
     "\n",
     "median_rentals['suburb'] = median_rentals['suburb'].str.strip()\n",
     "suburb_to_sa2['Target_Suburb'] = suburb_to_sa2['Target_Suburb'].str.strip()\n",
@@ -2127,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "044dd9f1",
    "metadata": {},
    "outputs": [
@@ -2146,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "14888ca9",
    "metadata": {},
    "outputs": [],
@@ -2167,7 +2156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "bd67ae07",
    "metadata": {},
    "outputs": [
@@ -2190,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "id": "d3921896",
    "metadata": {},
    "outputs": [],
@@ -2206,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "38862645",
    "metadata": {},
    "outputs": [
@@ -2224,7 +2213,7 @@
        "(522, 72)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2242,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "15dec2d1",
    "metadata": {},
    "outputs": [],
@@ -2264,7 +2253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "id": "56466771",
    "metadata": {},
    "outputs": [],
@@ -2287,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "id": "8f1d72af",
    "metadata": {},
    "outputs": [
@@ -2500,7 +2489,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2511,14 +2500,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "3e63322a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save CSV without geometry\n",
     "combined_nogeo = combined_df.drop(columns=[\"geometry\"], errors=\"ignore\")\n",
-    "combined_nogeo.to_csv(\"../../datasets/raw/curated/population_data.csv\", index=False)"
+    "combined_nogeo.to_csv(\"../../datasets/raw/population_data.csv\", index=False)"
    ]
   },
   {
@@ -2539,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "id": "b384a38e",
    "metadata": {},
    "outputs": [
@@ -2745,7 +2734,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2797,7 +2786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "id": "dc7c4516",
    "metadata": {},
    "outputs": [
@@ -2867,7 +2856,7 @@
    "outputs": [],
    "source": [
     "# Save file\n",
-    "combined_df_full.to_csv(\"../../datasets/raw/curated/full_erp_only_population_data.csv\", index=False)\n"
+    "combined_df_full.to_csv(\"../../datasets/raw/full_erp_only_population_data.csv\", index=False)\n"
    ]
   }
  ],
