--- a/notebooks/01_data_preprocessing/04_amenities_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing/04_amenities_preprocessing.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "595d310b",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "e341d845",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "93d3137c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "d3118e8f",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "985daed9",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "0895b2a8",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,6 @@
        "      <th>geometry</th>\n",
        "      <th>SA2_CODE21</th>\n",
        "      <th>SA2_NAME21</th>\n",
-       "      <th>group</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -182,7 +181,6 @@
        "      <td>POINT (143.52433 -38.84588)</td>\n",
        "      <td>217031476</td>\n",
        "      <td>Otway</td>\n",
-       "      <td>others</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -193,7 +191,6 @@
        "      <td>POINT (146.16829 -36.72986)</td>\n",
        "      <td>204021064</td>\n",
        "      <td>Benalla Surrounds</td>\n",
-       "      <td>others</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -204,7 +201,6 @@
        "      <td>POINT (145.1764 -37.09963)</td>\n",
        "      <td>204011060</td>\n",
        "      <td>Seymour Surrounds</td>\n",
-       "      <td>others</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -215,7 +211,6 @@
        "      <td>POINT (144.12032 -37.4246)</td>\n",
        "      <td>201021011</td>\n",
        "      <td>Daylesford</td>\n",
-       "      <td>others</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -226,11 +221,9 @@
        "      <td>POINT (144.52872 -36.06312)</td>\n",
        "      <td>216011408</td>\n",
        "      <td>Lockington - Gunbower</td>\n",
-       "      <td>others</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -248,7 +241,6 @@
        "      <td>POINT (146.38005 -36.57062)</td>\n",
        "      <td>204021067</td>\n",
        "      <td>Wangaratta Surrounds</td>\n",
-       "      <td>cultural</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50673</th>\n",
@@ -259,7 +251,6 @@
        "      <td>POINT (141.08392 -36.96737)</td>\n",
        "      <td>215011393</td>\n",
        "      <td>West Wimmera</td>\n",
-       "      <td>cultural</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50675</th>\n",
@@ -270,7 +261,6 @@
        "      <td>POINT (143.69958 -35.3812)</td>\n",
        "      <td>215031405</td>\n",
        "      <td>Swan Hill Surrounds</td>\n",
-       "      <td>others</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50676</th>\n",
@@ -281,7 +271,6 @@
        "      <td>POINT (144.70974 -37.62036)</td>\n",
        "      <td>210041539</td>\n",
        "      <td>Diggers Rest</td>\n",
-       "      <td>health</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50677</th>\n",
@@ -292,11 +281,10 @@
        "      <td>POINT (145.63941 -38.227)</td>\n",
        "      <td>212011548</td>\n",
        "      <td>Koo Wee Rup</td>\n",
-       "      <td>others</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>46705 rows × 8 columns</p>\n",
+       "<p>46705 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -326,23 +314,23 @@
        "50676      DIGGERS REST MATERNAL AND CHILD HEALTH   VIC   \n",
        "50677                       YANNATHAN PUBLIC HALL   VIC   \n",
        "\n",
-       "                          geometry SA2_CODE21             SA2_NAME21     group  \n",
-       "0      POINT (143.52433 -38.84588)  217031476                  Otway    others  \n",
-       "1      POINT (146.16829 -36.72986)  204021064      Benalla Surrounds    others  \n",
-       "2       POINT (145.1764 -37.09963)  204011060      Seymour Surrounds    others  \n",
-       "3       POINT (144.12032 -37.4246)  201021011             Daylesford    others  \n",
-       "4      POINT (144.52872 -36.06312)  216011408  Lockington - Gunbower    others  \n",
-       "...                            ...        ...                    ...       ...  \n",
-       "50672  POINT (146.38005 -36.57062)  204021067   Wangaratta Surrounds  cultural  \n",
-       "50673  POINT (141.08392 -36.96737)  215011393           West Wimmera  cultural  \n",
-       "50675   POINT (143.69958 -35.3812)  215031405    Swan Hill Surrounds    others  \n",
-       "50676  POINT (144.70974 -37.62036)  210041539           Diggers Rest    health  \n",
-       "50677    POINT (145.63941 -38.227)  212011548            Koo Wee Rup    others  \n",
+       "                          geometry SA2_CODE21             SA2_NAME21  \n",
+       "0      POINT (143.52433 -38.84588)  217031476                  Otway  \n",
+       "1      POINT (146.16829 -36.72986)  204021064      Benalla Surrounds  \n",
+       "2       POINT (145.1764 -37.09963)  204011060      Seymour Surrounds  \n",
+       "3       POINT (144.12032 -37.4246)  201021011             Daylesford  \n",
+       "4      POINT (144.52872 -36.06312)  216011408  Lockington - Gunbower  \n",
+       "...                            ...        ...                    ...  \n",
+       "50672  POINT (146.38005 -36.57062)  204021067   Wangaratta Surrounds  \n",
+       "50673  POINT (141.08392 -36.96737)  215011393           West Wimmera  \n",
+       "50675   POINT (143.69958 -35.3812)  215031405    Swan Hill Surrounds  \n",
+       "50676  POINT (144.70974 -37.62036)  210041539           Diggers Rest  \n",
+       "50677    POINT (145.63941 -38.227)  212011548            Koo Wee Rup  \n",
        "\n",
-       "[46705 rows x 8 columns]"
+       "[46705 rows x 7 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "4d3cee9f",
    "metadata": {},
    "outputs": [
@@ -464,7 +452,7 @@
        "4  216011408  Lockington - Gunbower  others  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d7b4f043",
    "metadata": {},
    "outputs": [
@@ -590,7 +578,7 @@
        "4      109031185         0          0       0       3        0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,12 +593,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "0c122094",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pivot_counts.to_csv(\"../../datasets/amenities/pivot_counts.csv\", index=False)"
+    "pivot_counts.to_csv(\"../../datasets/raw/pivot_counts.csv\", index=False)"
    ]
   }
  ],
