--- a/notebooks/01_data_preprocessing/05_crime_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing/05_crime_preprocessing.ipynb
@@ -13,7 +13,7 @@
     "## Inputs\n",
     "- LGA-level crime & victim data: `Data_Tables_LGA_Criminal_Incidents_Year_Ending_June_2025.xlsx`\n",
     "- SA2 and LGA shapefiles: `SA2_2021_AUST_GDA2020.shp`, `LGA_2021_AUST_GDA2020.shp`\n",
-    "- Correspondence weights for SA2-LGA allocation: `CG_SA2_2021_LGA_2021(in).csv`\n",
+    "- Correspondence weights for SA2-LGA allocation: `CG_SA2_2021_LGA_2021.csv`\n",
     "\n",
     "## Outputs\n",
     "- SA2-level crime dataset: `crime_dataset_weighted_to_SA2.csv`\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "7b17530c",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "85991778",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5ea5f8a0",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "646  POLYGON ((143.8417 -37.61597, 143.84175 -37.61...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "24dee06c",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "0351ec25",
    "metadata": {},
    "outputs": [
@@ -335,16 +335,16 @@
        "4               17689                  6312.138330  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Detect header row and load crime data\n",
-    "temp = pd.read_excel(\"../../datasets/crime/Data_Tables_LGA_Criminal_Incidents_Year_Ending_June_2025 (1).xlsx\", sheet_name=\"Table 01\", header=None)\n",
+    "temp = pd.read_excel(\"../../datasets/crime/Data_Tables_LGA_Criminal_Incidents_Year_Ending_June_2025.xlsx\", sheet_name=\"Table 01\", header=None)\n",
     "header_row = temp[temp.apply(lambda r: r.astype(str).str.contains(\"Year\", case=False)).any(axis=1)].index[0]\n",
-    "crime = pd.read_excel(\"../../datasets/crime/Data_Tables_LGA_Criminal_Incidents_Year_Ending_June_2025 (1).xlsx\", sheet_name=\"Table 01\", skiprows=header_row)\n",
+    "crime = pd.read_excel(\"../../datasets/crime/Data_Tables_LGA_Criminal_Incidents_Year_Ending_June_2025.xlsx\", sheet_name=\"Table 01\", skiprows=header_row)\n",
     "crime.columns = crime.columns.str.strip()\n",
     "crime.head()"
    ]
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "b510a655",
    "metadata": {},
    "outputs": [
@@ -458,16 +458,16 @@
        "4               17689                  6312.138330  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# detect header row and load victim data\n",
-    "temp_v = pd.read_excel(\"../../datasets/crime/Data_Tables_LGA_Criminal_Incidents_Year_Ending_June_2025 (1).xlsx\", sheet_name=\"Table 01\", header=None)\n",
+    "temp_v = pd.read_excel(\"../../datasets/crime/Data_Tables_LGA_Criminal_Incidents_Year_Ending_June_2025.xlsx\", sheet_name=\"Table 01\", header=None)\n",
     "header_row_v = temp_v[temp_v.apply(lambda r: r.astype(str).str.contains(\"Year\", case=False)).any(axis=1)].index[0]\n",
-    "victims = pd.read_excel(\"../../datasets/crime/Data_Tables_LGA_Criminal_Incidents_Year_Ending_June_2025 (1).xlsx\", sheet_name=\"Table 01\", skiprows=header_row_v)\n",
+    "victims = pd.read_excel(\"../../datasets/crime/Data_Tables_LGA_Criminal_Incidents_Year_Ending_June_2025.xlsx\", sheet_name=\"Table 01\", skiprows=header_row_v)\n",
     "victims.columns = victims.columns.str.strip()\n",
     "victims.head()"
    ]
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "9671747d",
    "metadata": {},
    "outputs": [],
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "d469b61d",
    "metadata": {},
    "outputs": [],
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8f1a93bf",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d9dc1146",
    "metadata": {},
    "outputs": [],
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "4bc1056d",
    "metadata": {},
    "outputs": [
@@ -872,19 +872,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "1022ca38",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load Data\n",
-    "P_CORR  = Path(\"../../datasets/crime/CG_SA2_2021_LGA_2021(in).csv\")\n",
-    "P_LGA   = Path(\"../../datasets/crime/crime_dataset(in) (1).csv\")"
+    "P_CORR  = Path(\"../../datasets/crime/CG_SA2_2021_LGA_2021.csv\")\n",
+    "P_LGA   = Path(\"../../datasets/crime/crime_dataset.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "5bc6162e",
    "metadata": {},
    "outputs": [],
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "8f2fd62e",
    "metadata": {},
    "outputs": [],
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "ae8c9b5d",
    "metadata": {},
    "outputs": [],
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "30424b31",
    "metadata": {},
    "outputs": [
