--- a/notebooks/01_data_preprocessing/06_domain_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing/06_domain_preprocessing.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 1,
    "id": "f3991098",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 2,
    "id": "6febe70a",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 3,
    "id": "ff26762a",
    "metadata": {},
    "outputs": [
@@ -498,20 +498,20 @@
        "4  POLYGON ((149.19572 -35.36126, 149.1997 -35.35...  "
       ]
      },
-     "execution_count": 301,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load data\n",
-    "sa2_df = gpd.read_file(\"/Users/tasneemzulaiqa/Documents/GitHub/project-2-group-real-estate-industry-project-7-2025/datasets/district_shape/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\")\n",
+    "sa2_df = gpd.read_file(\"../../datasets/district_shape/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\")\n",
     "sa2_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 4,
    "id": "0c80bed6",
    "metadata": {},
    "outputs": [],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 5,
    "id": "e32521a8",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 6,
    "id": "07931bd8",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 7,
    "id": "baa21f7d",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
        "4                        Built in wardrobes, Heating  2025-09-03  "
       ]
      },
-     "execution_count": 305,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 8,
    "id": "57050c26",
    "metadata": {},
    "outputs": [
@@ -999,7 +999,7 @@
        "29               Swimming Pool    500"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 9,
    "id": "f77dc0da",
    "metadata": {},
    "outputs": [
@@ -1038,13 +1038,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:Applied processor reduces input query to empty string, all comparisons will have score 0. [Query: '']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "WARNING:root:Applied processor reduces input query to empty string, all comparisons will have score 0. [Query: '']\n",
       "WARNING:root:Applied processor reduces input query to empty string, all comparisons will have score 0. [Query: '']\n",
       "WARNING:root:Applied processor reduces input query to empty string, all comparisons will have score 0. [Query: '']\n",
       "WARNING:root:Applied processor reduces input query to empty string, all comparisons will have score 0. [Query: '']\n",
@@ -2398,7 +2392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 10,
    "id": "ecee2d86",
    "metadata": {},
    "outputs": [
@@ -2526,7 +2520,7 @@
        "14              study   1280"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2543,7 +2537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 11,
    "id": "c3ed42c5",
    "metadata": {},
    "outputs": [
@@ -2715,7 +2709,7 @@
        "4             0    0                0      0         0  "
       ]
      },
-     "execution_count": 309,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2741,7 +2735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 12,
    "id": "684aa97b",
    "metadata": {},
    "outputs": [],
@@ -2756,7 +2750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 13,
    "id": "e0adb5ae",
    "metadata": {},
    "outputs": [
@@ -2772,7 +2766,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2801,7 +2795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 14,
    "id": "37c57239",
    "metadata": {},
    "outputs": [
@@ -2851,7 +2845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 15,
    "id": "843a00bc",
    "metadata": {},
    "outputs": [],
@@ -2871,7 +2865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 16,
    "id": "10e2ccdf",
    "metadata": {},
    "outputs": [
@@ -2957,7 +2951,7 @@
        "max    808500.000000  212917.000000"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2968,7 +2962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 17,
    "id": "da7e2a77",
    "metadata": {},
    "outputs": [
@@ -3024,7 +3018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 18,
    "id": "71a912d5",
    "metadata": {},
    "outputs": [],
@@ -3040,7 +3034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 19,
    "id": "874ad0b1",
    "metadata": {},
    "outputs": [
@@ -3313,7 +3307,7 @@
        "11193  Apartment / Unit / Flat  "
       ]
      },
-     "execution_count": 317,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3329,7 +3323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 20,
    "id": "c05338df",
    "metadata": {},
    "outputs": [
@@ -3401,7 +3395,7 @@
        "11193     27157.50  108630.0  HUG11-12/847 Whitehorse Road  BOX HILL"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3417,7 +3411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 21,
    "id": "0f6517cd",
    "metadata": {},
    "outputs": [],
@@ -3427,7 +3421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 22,
    "id": "c2b3b3e1",
    "metadata": {},
    "outputs": [
@@ -4053,7 +4047,7 @@
        "[20 rows x 28 columns]"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4064,7 +4058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 23,
    "id": "423997a4",
    "metadata": {},
    "outputs": [],
@@ -4074,7 +4068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 24,
    "id": "cddb34c8",
    "metadata": {},
    "outputs": [
@@ -4096,7 +4090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 25,
    "id": "d74db267",
    "metadata": {},
    "outputs": [
@@ -4182,7 +4176,7 @@
        "max     5750.000000  212917.000000"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4193,7 +4187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 26,
    "id": "9cd11ab9",
    "metadata": {},
    "outputs": [
@@ -4228,7 +4222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 27,
    "id": "e06f63ab",
    "metadata": {},
    "outputs": [
@@ -4268,7 +4262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 28,
    "id": "e86bf940",
    "metadata": {},
    "outputs": [
@@ -4470,7 +4464,7 @@
        "Studio                         350.00   396.2500  1572.0  "
       ]
      },
-     "execution_count": 326,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4481,7 +4475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 29,
    "id": "3ce349bd",
    "metadata": {},
    "outputs": [
@@ -4495,7 +4489,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4520,7 +4514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 30,
    "id": "30153481",
    "metadata": {},
    "outputs": [
@@ -4553,7 +4547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 31,
    "id": "c4737a94",
    "metadata": {},
    "outputs": [
@@ -4586,7 +4580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 32,
    "id": "cfdc95b4",
    "metadata": {},
    "outputs": [],
@@ -4603,7 +4597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 33,
    "id": "00f62dd6",
    "metadata": {},
    "outputs": [
@@ -4642,7 +4636,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4653,7 +4647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 34,
    "id": "6d99d4b1",
    "metadata": {},
    "outputs": [
@@ -4960,7 +4954,7 @@
        "[8 rows x 23 columns]"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4972,7 +4966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 35,
    "id": "3ba421cf",
    "metadata": {},
    "outputs": [],
@@ -4985,7 +4979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 36,
    "id": "c698dcca",
    "metadata": {},
    "outputs": [],
