--- a/notebooks/01_data_preprocessing/07_median_data_prepocessing.ipynb
+++ b/notebooks/01_data_preprocessing/07_median_data_prepocessing.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "d2ee798a",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "7d964680",
    "metadata": {},
    "outputs": [
@@ -59,9 +59,9 @@
       "Paths:\n",
       "  EXCEL_PATH   = ../../datasets/property/Moving annual median rent by suburb and town - March quarter 2025.xlsx\n",
       "  MAP_CSV      = ../../datasets/6. excel to sa2/mapped_target_suburbs.csv\n",
-      "  SPLIT_DIR    = ../../datasets/raw/split_sheets\n",
-      "  STRIPPED_DIR = ../../datasets/raw/split_sheets/split_sheets_stripped\n",
-      "  TIDY_DIR     = ../../datasets/raw/tidy_monthly\n"
+      "  SPLIT_DIR    = ../../datasets/raw/cleaned/split_sheets\n",
+      "  STRIPPED_DIR = ../../datasets/raw/cleaned/split_sheets/split_sheets_stripped\n",
+      "  TIDY_DIR     = ../../datasets/raw/cleaned/tidy_monthly\n"
      ]
     }
    ],
@@ -70,9 +70,10 @@
     "# Project/data root\n",
     "DATA_ROOT = Path(\"../../datasets\")\n",
     "RAW_DIR = DATA_ROOT / \"raw\"\n",
-    "SPLIT_DIR = RAW_DIR / \"split_sheets\"\n",
+    "CLEAN_DIR = RAW_DIR / \"cleaned\"\n",
+    "SPLIT_DIR = CLEAN_DIR / \"split_sheets\"\n",
     "STRIPPED_DIR = SPLIT_DIR / \"split_sheets_stripped\"\n",
-    "TIDY_DIR = RAW_DIR / \"tidy_monthly\"\n",
+    "TIDY_DIR = CLEAN_DIR / \"tidy_monthly\"\n",
     "\n",
     "# Excel and mapping files\n",
     "EXCEL_PATH = DATA_ROOT / \"property\" / \"Moving annual median rent by suburb and town - March quarter 2025.xlsx\"\n",
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "e69d134e",
    "metadata": {},
    "outputs": [
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "2a96cba7",
    "metadata": {},
    "outputs": [
@@ -199,25 +200,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "c771800c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tidy] 1_bedroom_flat.csv         → 13538 rows\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  raw = raw.applymap(lambda x: None if pd.isna(x) else str(x).strip())\n",
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(_clean_cell)\n",
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  raw = raw.applymap(lambda x: None if pd.isna(x) else str(x).strip())\n",
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(_clean_cell)\n",
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  raw = raw.applymap(lambda x: None if pd.isna(x) else str(x).strip())\n",
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(_clean_cell)\n"
      ]
     },
@@ -225,7 +233,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[tidy] 1_bedroom_flat.csv         → 13538 rows\n",
       "[tidy] 2_bedroom_flat.csv         → 14607 rows\n",
       "[tidy] 2_bedroom_house.csv        → 14124 rows\n",
       "[tidy] 3_bedroom_flat.csv         → 13978 rows\n"
@@ -235,17 +242,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  raw = raw.applymap(lambda x: None if pd.isna(x) else str(x).strip())\n",
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(_clean_cell)\n",
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  raw = raw.applymap(lambda x: None if pd.isna(x) else str(x).strip())\n",
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(_clean_cell)\n",
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  raw = raw.applymap(lambda x: None if pd.isna(x) else str(x).strip())\n",
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(_clean_cell)\n"
      ]
     },
@@ -254,16 +261,17 @@
      "output_type": "stream",
      "text": [
       "[tidy] 3_bedroom_house.csv        → 14428 rows\n",
-      "[tidy] 4_bedroom_house.csv        → 14054 rows\n"
+      "[tidy] 4_bedroom_house.csv        → 14054 rows\n",
+      "[tidy] all_properties.csv         → 14739 rows\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:12: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  raw = raw.applymap(lambda x: None if pd.isna(x) else str(x).strip())\n",
-      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_57050/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/59/n7t8nd2s08zcjsn4bd22nlsr0000gn/T/ipykernel_61400/3719917520.py:41: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(_clean_cell)\n"
      ]
     },
@@ -271,9 +279,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[tidy] all_properties.csv         → 14739 rows\n",
       "\n",
-      "[done] Combined → ../../datasets/raw/tidy_monthly/all_properties_tidy.csv  rows=99,468\n"
+      "[done] Combined → ../../datasets/raw/cleaned/tidy_monthly/all_properties_tidy.csv  rows=99,468\n"
      ]
     }
    ],
@@ -379,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "d37aceb8",
    "metadata": {},
    "outputs": [
@@ -387,8 +394,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: ../../datasets/raw/tidy_monthly/all_properties_tidy_enriched.csv — matched 98774/99468 (99.3%)\n",
-      "Unmatched list saved: ../../datasets/raw/tidy_monthly/all_properties_tidy_UNMATCHED_SUBURBS.csv\n",
+      "Saved: ../../datasets/raw/cleaned/tidy_monthly/all_properties_tidy_enriched.csv — matched 98774/99468 (99.3%)\n",
+      "Unmatched list saved: ../../datasets/raw/cleaned/tidy_monthly/all_properties_tidy_UNMATCHED_SUBURBS.csv\n",
       "Top few:\n",
       "         Suburb  count\n",
       "0  Wanagaratta    694\n"
@@ -399,9 +406,9 @@
     "# 1) Paths\n",
     "PROJECT_ROOT = Path(\"../../\") \n",
     "DATA_ROOT    = PROJECT_ROOT / \"datasets\"\n",
-    "TIDY_CSV     = DATA_ROOT / \"raw/tidy_monthly/all_properties_tidy.csv\"\n",
-    "OUT_ENRICHED = DATA_ROOT / \"raw/tidy_monthly/all_properties_tidy_enriched.csv\"\n",
-    "OUT_UNMATCHED= DATA_ROOT / \"raw/tidy_monthly/all_properties_tidy_UNMATCHED_SUBURBS.csv\"\n",
+    "TIDY_CSV     = DATA_ROOT / \"raw/cleaned/tidy_monthly/all_properties_tidy.csv\"\n",
+    "OUT_ENRICHED = DATA_ROOT / \"raw/cleaned/tidy_monthly/all_properties_tidy_enriched.csv\"\n",
+    "OUT_UNMATCHED= DATA_ROOT / \"raw/cleaned/tidy_monthly/all_properties_tidy_UNMATCHED_SUBURBS.csv\"\n",
     "\n",
     "MAP_CSV = DATA_ROOT / \"district_shape/sa2_lookup/mapped_target_suburbs.csv\"\n",
     "\n",
