--- a/notebooks/01_data_preprocessing/09_school_healthcare_cbd.ipynb
+++ b/notebooks/01_data_preprocessing/09_school_healthcare_cbd.ipynb
@@ -17,9 +17,8 @@
     "- OpenRouteService API key for driving distance/duration calculations\n",
     "\n",
     "## Outputs\n",
-    "- FOI points assigned to SA2: `foi_gdf`\n",
     "- Driving distances/times to nearest FOIs (categories: education, health): `nearest_drive_metrics2.csv`\n",
-    "- Driving distance/time to Melbourne CBD: `domain_to_cbd.csv`\n",
+    "- Driving distance/time to Melbourne CBD: `sch,hospital,cbd`\n",
     "\n",
     "## Key Steps\n",
     "1. Load FOI shapefile and drop unneeded columns.\n",
@@ -274,7 +273,7 @@
     "# sources × destinations per Matrix call\n",
     "ORS_ELEMENTS_LIMIT = 3500         \n",
     "BATCH_DELAY = 2                    \n",
-    "OUTPUT_CSV = \"nearest_drive_metrics2.csv\"\n",
+    "OUTPUT_CSV = \"../../datasets/raw/nearest_drive_metrics2.csv\"\n",
     "\n",
     "\n",
     "def haversine_vec(orig_lons, orig_lats, dest_lons, dest_lats):\n",
@@ -962,7 +961,7 @@
     "compute_nearest_drive_metrics_chunked(\n",
     "    domain_gdf=domain_gdf,\n",
     "    foi_gdf=foi_gdf,\n",
-    "    output_csv=\"nearest_drive_metrics2.csv\",\n",
+    "    output_csv=\"../../datasets/raw/nearest_drive_metrics2.csv\",\n",
     "    chunk_size=30,          \n",
     "    start_row=7470,           \n",
     "    limit_radius_m=15000   \n",
@@ -988,7 +987,7 @@
     "CBD_COORD = (144.9671, -37.8183) \n",
     "ORS_ELEMENTS_LIMIT = 3500\n",
     "BATCH_DELAY = 2\n",
-    "OUTPUT_CSV = \"domain_to_cbd.csv\"\n",
+    "OUTPUT_CSV = \"../../datasets/raw/sch,hospital,cbd.csv\"\n",
     "\n",
     "def wait_until_matrix_metrics(origins, destinations):\n",
     "    \"\"\"\n",
@@ -2114,7 +2113,7 @@
     "# Run pipeline\n",
     "compute_domain_to_cbd(\n",
     "    domain_gdf=domain_gdf,\n",
-    "    output_csv=\"../../datasets/property/sch,hospital,cbd(in).csv\",\n",
+    "    output_csv=\"../../datasets/raw/sch,hospital,cbd.csv\",\n",
     "    chunk_size=30,\n",
     "    start_row=0\n",
     ")"
