--- a/notebooks/02_data_integration/domain_data_integration.ipynb
+++ b/notebooks/02_data_integration/domain_data_integration.ipynb
@@ -12,10 +12,10 @@
     "\n",
     "## Inputs\n",
     "- `property_with_distances_copy.csv` – distances to CBD, supermarkets, train stations  \n",
-    "- `sch,hospital,cbd(in).csv` – nearest schools, healthcare  \n",
-    "- `crime_dataset_weighted_to_SA2(in) (1).csv` – crime rates  \n",
+    "- `sch,hospital,cbd.csv` – nearest schools, healthcare  \n",
+    "- `crime_dataset_weighted_to_SA2.csv` – crime rates  \n",
     "- `population_data.csv`, `full_erp_only_population_data.csv` – population and ERP data  \n",
-    "- `income_predictions_2017_final(in).csv` – predicted income and CAGR  \n",
+    "- `income_predictions_2017_final.csv` – predicted income and CAGR  \n",
     "\n",
     "## Outputs\n",
     "- `domain_combined_all_with_sa2_features.csv` – integrated dataset combining property and SA2-level features\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c7847ec0",
    "metadata": {},
    "outputs": [
@@ -417,8 +417,8 @@
     }
    ],
    "source": [
-    "distances_df = pd.read_csv(\"../../datasets/property/property_with_distances_copy.csv\")\n",
-    "school_health_df = pd.read_csv('../../datasets/property/sch,hospital,cbd(in).csv')\n",
+    "distances_df = pd.read_csv(\"../../datasets/raw/property_with_distances_copy.csv\")\n",
+    "school_health_df = pd.read_csv('../../datasets/raw/sch,hospital,cbd.csv')\n",
     "distances_df.head()"
    ]
   },
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "48fba1d1",
    "metadata": {},
    "outputs": [
@@ -1167,7 +1167,7 @@
    ],
    "source": [
     "# crime \n",
-    "crime_df = pd.read_csv(\"../../datasets/crime/crime_dataset_weighted_to_SA2(in) (1).csv\")\n",
+    "crime_df = pd.read_csv(\"../../datasets/raw/crime_dataset_weighted_to_SA2.csv\")\n",
     "crime_df.head()"
    ]
   },
@@ -1196,14 +1196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6a2e32be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "population_df = pd.read_csv(\"../../datasets/raw/cleaned/curated/population_data.csv\")\n",
-    "erp_df = pd.read_csv(\"../../datasets/raw/cleaned/curated/full_erp_only_population_data.csv\")\n",
-    "income_df = pd.read_csv(\"../../datasets/income/income_predictions_2017_final(in).csv\")"
+    "population_df = pd.read_csv(\"../../datasets/raw/population_data.csv\")\n",
+    "erp_df = pd.read_csv(\"../../datasets/raw/full_erp_only_population_data.csv\")\n",
+    "income_df = pd.read_csv(\"../../datasets/raw/income_predictions_2017_final.csv\")"
    ]
   },
   {
