--- a/notebooks/02_data_integration/historical_data_integration.ipynb
+++ b/notebooks/02_data_integration/historical_data_integration.ipynb
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "id": "dce3a3c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load data\n",
-    "properties_df = pd.read_csv('../../datasets/property/all_properties_tidy_enriched.csv', parse_dates=[\"date\"])"
+    "properties_df = pd.read_csv('../../datasets/raw/cleaned/tidy_monthly/all_properties_tidy_enriched.csv', parse_dates=[\"date\"])"
    ]
   },
   {
@@ -315,13 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "id": "0d92c661",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import population\n",
-    "population_df = pd.read_csv('../../datasets/raw/cleaned/curated/full_erp_only_population_data.csv')\n"
+    "population_df = pd.read_csv('../../datasets/raw/full_erp_only_population_data.csv')\n"
    ]
   },
   {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "id": "dc974121",
    "metadata": {},
    "outputs": [
@@ -806,7 +806,7 @@
    ],
    "source": [
     "# Import income df\n",
-    "income_df = pd.read_csv(\"../../datasets/income/income_predictions_2017_final.csv\")\n",
+    "income_df = pd.read_csv(\"../../datasets/raw/income_predictions_2017_final.csv\")\n",
     "income_df = income_df.drop(income_df.index[0]).reset_index(drop=True) \n",
     "income_df = income_df.rename(columns={\"SA2\": \"sa2_code\"})\n",
     "income_df.head()"
@@ -1021,12 +1021,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "id": "006b964b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "crime_df = pd.read_csv(\"../../datasets/crime/crime_dataset_weighted_to_SA2(in) (1).csv\")"
+    "crime_df = pd.read_csv(\"../../datasets/raw/crime_dataset_weighted_to_SA2.csv\")"
    ]
   },
   {
@@ -1588,12 +1588,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "id": "cb69e0ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "foi_counts_df = pd.read_csv(\"../../datasets/amenities/pivot_counts.csv\")"
+    "foi_counts_df = pd.read_csv(\"../../datasets/raw/pivot_counts.csv\")"
    ]
   },
   {
