--- a/notebooks/03_data_analysis/affordability.ipynb
+++ b/notebooks/03_data_analysis/affordability.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "32be1b76",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
    ],
    "source": [
     "# Load predicted income per SA2\n",
-    "income = pd.read_csv(\"../../datasets/income/income_predictions_2017_final.csv\")\n",
+    "income = pd.read_csv(\"../../datasets/raw/income_predictions_2017_final.csv\")\n",
     "income[\"SA2\"] = income[\"SA2\"].astype(str).str.zfill(9)\n",
     "income.head()\n"
    ]
@@ -1230,7 +1230,7 @@
     "plt.title(\"Top 10 Most Affordable SA2s in Victoria (2025)\")\n",
     "plt.xlabel(\"Average Rent ÷ Income Ratio\")\n",
     "plt.ylabel(\"SA2 Region\")\n",
-    "plt.gca().invert_yaxis()  # So the most affordable appears on top\n",
+    "plt.gca().invert_yaxis()  \n",
     "plt.grid(axis='x', alpha=0.5)\n",
     "\n",
     "for i, v in enumerate(top10[\"avg_affordability_ratio\"]):\n",
