--- a/notebooks/01_data_preprocessing/03_income_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing/03_income_preprocessing.ipynb
@@ -26,13 +26,12 @@
     "- `../../datasets/income/Income_2017med(in).csv` (2017 median incomes by SA2)\n",
     "\n",
     "## Outputs\n",
-    "- `income_df` — cleaned and merged income dataset with predicted median incomes for 2023–2030\n",
     "- `income_predictions_2017_final.csv` — CSV export of the final dataset with forecasts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "b2fde7f7",
    "metadata": {},
    "outputs": [],
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "bda8b29a",
    "metadata": {},
    "outputs": [
@@ -255,7 +254,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "c94778c0",
    "metadata": {},
    "outputs": [
@@ -466,7 +465,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "d75fc994",
    "metadata": {},
    "outputs": [],
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "dc84640a",
    "metadata": {},
    "outputs": [
@@ -837,7 +836,7 @@
        "[523 rows x 17 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "503906f2",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1176,7 @@
        "[523 rows x 17 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "0200da8e",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1217,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "0a12f49e",
    "metadata": {},
    "outputs": [
@@ -1566,7 +1565,7 @@
        "[523 rows x 17 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1586,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "a0c26d24",
    "metadata": {},
    "outputs": [
@@ -1684,7 +1683,7 @@
        "4  201011006  Delacombe   45598.0   47940.0   49810.0   51041.0   53390.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1706,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "585daed2",
    "metadata": {},
    "outputs": [
@@ -1898,7 +1897,7 @@
        "[523 rows x 8 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1930,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "fc856af7",
    "metadata": {},
    "outputs": [
@@ -1979,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "5cb20b18",
    "metadata": {},
    "outputs": [
@@ -2055,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "c14f9054",
    "metadata": {},
    "outputs": [
@@ -2394,7 +2393,7 @@
        "[523 rows x 17 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2436,7 +2435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "income_df.to_csv(\"income_predictions_2017_final.csv\", index=False)"
+    "income_df.to_csv(\"../../datasets/raw/income_predictions_2017_final.csv\", index=False)"
    ]
   }
  ],
